# torque-finder

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  guide.md  main.py  pyproject.toml  railway.toml  thoughts.md
docs/runbooks/: 2026-06-09-0005-drop-rollout.md
docs/superpowers/plans/: 2026-06-09-html-content-ingestion.md  2026-06-09-sram-publication-discovery.md
docs/superpowers/specs/: 2026-06-09-html-content-ingestion-design.md  2026-06-09-sram-publication-discovery-design.md
infra/: railway.toml
infra/migrations/: env.py
scripts/: backfill_product_family.py  ingest-pass1.sh  ingest-pass2.sh  start.sh
src/parts_lookup/: __init__.py  config.py  observability.py
tests/: conftest.py
tests/eval/: grading.py  ground_truth.py  ground_truth_html.py  ground_truth_recall.py  ground_truth_sampled.py  metrics.py  mine_specs.py  probes_out_of_corpus.py  run_eval.py  test_eval_adversarial.py  test_eval_html.py  test_eval_recall.py  test_eval_sampled.py  test_eval_smoke.py
tests/fixtures/: sram_manual_data_red_axs_trimmed.json  sram_model_ed_red_e1.html  sram_publication_red_axs.html
tests/integration/: test_discovery_registry.py  test_documents_chunks.py  test_repository_smoke.py
tests/unit/: test_api_cors.py  test_discovery_cli.py  test_discovery_config.py  test_discovery_crawler.py  test_discovery_fetcher.py  test_discovery_hardening.py  test_discovery_model_page.py  test_discovery_models.py  test_discovery_publication_probe.py  test_discovery_real_fixtures.py  test_discovery_sitemap.py  test_doc_aggregation.py  test_domain.py  test_eval_grading_offline.py  test_eval_metrics_offline.py  test_extraction.py  test_health_routes.py  test_html_parser.py  test_html_pipeline.py  test_ingest_cli.py  test_page_expansion.py  test_product_boost.py  test_product_match.py  test_query_route_doc_level.py  test_query_route_failures.py  test_rrf.py  test_run_eval_offline.py
(+40 files in other folders)
